19Nov21=======================================================================
1. Add the ability of console.pl to resize and have dx spots also resize so
   that the comment field's size will increase accordingly. Sh/dx amd sh/mydx
   also work similarly. If you make the console width smaller or wider then 
   spots already on the screen will not resize. 
2. For client programs that parse the output (why? use set/ve7cc to get more
   easily machine parsed output), a new command "set/width <width>" is 
   available. 
18Nov21=======================================================================
1. Add a dx spot cache which will store 2 days worth (configurable) of spots.
   This is then used by the vast majority of simple sh/dx queries without 
   using a sub process. A simple sh/dx is any sh/dx that does not have an
   "expression" such as "sh/dx g1tlh". So "sh/dx", "sh/dx 200", "sh/mydx" will
   always run in the main program via the cache. Certain client programs (no
   names, no pack drill) will notice the difference immediately. It's also a
   bit snappier.
2. set/badspotter or set/badnode will work for RBN input. 
3. RBN input with invalid QRGs will be dropped with a nice friendly message
   rather than a scary exception message about multiplication thrown by one 
   of the libraries that I use. 
4. Added CTY-3126 prefixes.
5. Silently ignore self spotting below 1240000Khz (change 
   $Spot::minselfspot to 0 to disable or some other freq in Khz). NOTE this 
   will appear as a spot to the spotter's feed, but will not be passed on.
15Jul21=======================================================================
1. Fix long standing bug in crontabs that commands with " rather than ' around
   strings could cause those commands not to work. 
2. Add CTY 3117 prefixes. 
15Mar21=======================================================================
1. Fix DXUtil::localdata so that it does actually prefer the latest version 